...
                                                <constraint firstItem="JZJ-w5-h6c" firstAttribute="leading" secondItem="D5H-Gz-7TR" secondAttribute="leading" constant="16" id="qKs-gK-DGu"/>
                                                <constraint firstItem="O6u-8Q-JfL" firstAttribute="leading" secondItem="JZJ-w5-h6c" secondAttribute="trailing" constant="16" id="vWo-83-akl"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <connections>
                                            <outlet property="flagImageView" destination="JZJ-w5-h6c" id="1oT-jg-LJe"/>
                                            <outlet property="nameLabel" destination="O6u-8Q-JfL" id="pib-yk-7De"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="CountryListTable"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPX-PX-eKn">
                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
                            </searchBar>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="8D9-8X-yhZ">
...
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="myActivity"/>
                                </userDefinedRuntimeAttributes>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" label="countryListVC"/>
                        <constraints>
                            <constraint firstItem="NPX-PX-eKn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Cd6-tv-OcF"/>
                            <constraint firstItem="NPX-PX-eKn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HXF-XY-KNk"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FAj-3B-Yx0" secondAttribute="trailing" id="M9K-Bh-x6a"/>
                            <constraint firstItem="FAj-3B-Yx0" firstAttribute="top" secondItem="NPX-PX-eKn" secondAttribute="bottom" constant="5" id="T5c-2Q-xw9"/>
                            <constraint firstItem="NPX-PX-eKn" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Y8o-Ch-jfe"/>
...
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="gMG-UA-ets">
                                        <rect key="frame" x="0.0" y="40" width="382" height="220"/>
                                        <accessibility key="accessibilityConfiguration" label="largeImage"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="220" id="73x-hh-4gu"/>
                                        </constraints>
                                    </imageView>
                                </subviews>
                            </stackView>
...
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Gei-kZ-FMF">
                                        <rect key="frame" x="0.0" y="2" width="191" height="46.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Region" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pWG-L5-ebF">
                                                <rect key="frame" x="73.5" y="0.0" width="43.5" height="17"/>
                                                <accessibility key="accessibilityConfiguration" label="regionLabel"/>
                                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52U-wC-774">
                                                <rect key="frame" x="80" y="27" width="31" height="19.5"/>
...
