...
//

import UIKit

class CountryDetailViewController: UIViewController {
    private struct Constants {
        static let title = "Country Details"
        static let defaultHeight: CGFloat = 220
    }
    
    @IBOutlet weak var nameLabel: UILabel!
    @IBOutlet weak var flagImageView: UIImageView!
    @IBOutlet weak var regionLabel: UILabel!
...
