...
//

import UIKit

class CountryListViewController: UIViewController {
    private struct Constants {
        static let title = "Countries"
    }
    
    @IBOutlet weak var searchBar: UISearchBar!
    @IBOutlet weak var tableView: UITableView!
    @IBOutlet weak var activityIndicator: UIActivityIndicatorView!
    
...
